<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/navigation"
                android:textColor="@color/colorPrimary"
                style="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_tutorial"
                android:padding="5dp"/>

            <!--divider line 1-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timetable_detail_alarm_type_choice"
                android:background="@drawable/divider_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <!-- Task tutorial -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/task"
                android:textColor="@color/colorPrimary"
                style="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_tutorial"
                android:padding="5dp"/>

            <!--divider line 2-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/divider_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <!-- Timetable tutorial -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/timetable"
                android:textColor="@color/colorPrimary"
                style="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timetable_tutorial"
                android:padding="5dp"/>

            <!--divider line 3-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/divider_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <!-- Week tutorial -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/week"
                android:textColor="@color/colorPrimary"
                style="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/week_tutorial"
                android:padding="5dp"/>

            <!--divider line 2-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/divider_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>