<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/week_detail_fragment_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/week_detail_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/week_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/week_name"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/week_detail_check_box"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_current"/>

        <Button
            android:id="@+id/week_detail_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:textColor="@color/colorPrimary"
            style="?android:borderlessButtonStyle"/>
    </LinearLayout>

    <!-- Information about the week -->

    <LinearLayout
        android:id="@+id/week_detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/week_info"
            android:textColor="@color/colorPrimary"
            style="?android:textAppearanceMedium"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </LinearLayout>

</LinearLayout>