<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/event_reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_before"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/hour"/>

        <SeekBar
            android:id="@+id/event_reminder__hour_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/minute"/>

        <SeekBar
            android:id="@+id/event_reminder_minute_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>